# fuzebox-telemetry

./: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  docker-compose.yml  render.yaml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
app/: db.py  main.py  schemas.py  scoring.py
benchmarks/: sdk_hot_path.py
dashboard/: next.config.mjs  package.json  tsconfig.json
dashboard/app/: layout.tsx  page.tsx
dashboard/app/agents/: page.tsx
dashboard/app/anomalies/: page.tsx
dashboard/app/infra/: page.tsx
dashboard/app/overview/: page.tsx
dashboard/app/skills/: page.tsx
dashboard/app/trust/: page.tsx
docs/: customer_integration.md  runbook.md  threat_model.md  verify.md
docs/adr/: 0001-tech-stack.md
helm/fuzebox/: Chart.yaml  values.yaml
helm/fuzebox/templates/: _helpers.tpl  cosigner-api.yaml  dashboard.yaml  miner.yaml  otel-collector.yaml  postgres.yaml  reconciliation-worker.yaml  redis.yaml
scripts/: sprint1_demo.py  sprint2_demo.py  sprint3_demo.py  sprint5_demo.py
sdk-python/: README.md  pyproject.toml
sdk-python/src/fuzebox/: __init__.py  buffer.py  client.py  exceptions.py  litellm_wrapper.py  pel.py
sdk-python/tests/: conftest.py  test_buffer.py  test_init_and_open_pel_row.py  test_litellm_wrapper.py
sdk-typescript/: package.json  tsconfig.json
sdk-typescript/src/: client.ts  index.ts  pel.ts
sdk-typescript/tests/: sdk.test.ts
services/cosigner_api/: Dockerfile  alembic.ini
services/reconciliation_worker/: tasks.py
services/verify_cli/: replay.py  verify.py
templates/: dashboard.html
(+45 files in other folders)
