[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "fuzebox"
version = "0.1.0"
description = "FuzeBox AEOS Telemetry SDK"
authors = [{ name = "FuzeBox" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "httpx>=0.27",
    "structlog>=24.1",
]

[project.optional-dependencies]
otel = ["opentelemetry-api>=1.25", "opentelemetry-sdk>=1.25"]
litellm = ["litellm>=1.40"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "respx>=0.21",
    "mypy>=1.10",
    "hypothesis>=6.100",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fuzebox"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
